[package]
name = "riley-comments"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
riley-comments-core = { path = "../riley-comments-core" }
riley-comments-api = { path = "../riley-comments-api" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
