[package]
name = "riley-comments-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
